# loam

./: .editorconfig  .gitattributes  .gitignore  .npmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  SECURITY.md  SPEC.md  biome.json  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.config/: nextest.toml
.github/: README.md
.github/actions/setup-native/: action.yml
.github/actions/setup-workspace/: action.yml
.github/workflows/: ci.yml
apps/desktop/: .gitignore  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: csp.spec.ts  filetree.spec.ts  shell.spec.ts  smoke.spec.ts  tabs.spec.ts  titlebar.spec.ts
apps/desktop/native-smoke/: macos-boot.mjs  smoke.mjs  windows-boot.mjs
apps/desktop/src/: App.tsx  README.md  Titlebar.tsx  index.ts  ipc.ts  main.ts  main.tsx  test-setup.ts  titlebar.css  tokens.css
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  menu.rs  routes.rs  windows.rs
apps/desktop/src-tauri/tests/: bindings_drift.rs  contract_manifest.rs
apps/desktop/src/settings/: registry.ts
crates/loam-bench/: Cargo.toml
crates/loam-bench/baselines/: switcher.json
crates/loam-bench/src/: main.rs
crates/loam-core/: Cargo.toml
crates/loam-core/proptest-regressions/parse/: mod.txt
crates/loam-core/src/: ipc.rs  lib.rs
crates/loam-core/src/index/: db.rs  dump.rs  incremental.rs  mod.rs  pipeline.rs  recovery.rs  repo.rs  schema.rs
crates/loam-core/src/parse/: extensions.rs  frontmatter.rs  mod.rs  model.rs
crates/loam-core/src/search/: execute.rs  frecency.rs  lifecycle.rs  mod.rs  query.rs  schema.rs  session.rs  switcher.rs
crates/loam-core/src/vault/: cloud.rs  conflict.rs  identity.rs  layout.rs  mod.rs  note.rs  open.rs  ops.rs  paths.rs  tree.rs  watch.rs  writer.rs
crates/loam-core/tests/: index_determinism.rs  index_incremental.rs  index_pipeline.rs  index_recovery.rs  index_repo.rs  index_schema.rs  ipc_contract.rs  markdown_fixtures.rs  search_execute.rs  search_frecency.rs  search_lifecycle.rs  search_query.rs  search_session.rs  search_switcher.rs
crates/loam-core/tests/snapshots/: ipc-shapes.json
docs/: README.md  ipc-contract-manifest.json  ipc-contract.md  native-smoke-checklist.md  package.json  search-switcher.md  security.md
fixtures/: README.md
fixtures/coverage/: fail-summary.json  pass-summary.json
fixtures/helpers/: vault.ts
fixtures/licenses/: deny-fail.toml  js-fail.json  js-pass.json
fixtures/markdown/blocks/: block-ids.expected.json  block-ids.md
fixtures/markdown/core/: code-exclusion.expected.json  code-exclusion.md  code-fences.expected.json  code-fences.md  escapes.expected.json  escapes.md  headings-and-inlines.expected.json  headings-and-inlines.md  nested-lists.expected.json  nested-lists.md  nested-quotes.expected.json  nested-quotes.md  thematic-break.expected.json  thematic-break.md  unicode.expected.json  unicode.md
fixtures/markdown/extensions/: callouts.expected.json  callouts.md  escaped-delimiters.expected.json  escaped-delimiters.md  highlights-comments.expected.json  highlights-comments.md
fixtures/markdown/frontmatter/: typed.expected.json  typed.md  valid.expected.json  valid.md
fixtures/markdown/gfm/: autolink-strikethrough.expected.json  autolink-strikethrough.md  footnotes.expected.json  footnotes.md  table.expected.json  table.md  tasklist.expected.json  tasklist.md
fixtures/markdown/links/: embeds.expected.json  embeds.md  markdown-links.expected.json  markdown-links.md  wikilinks.expected.json  wikilinks.md
fixtures/markdown/malformed/: bad-yaml-frontmatter.expected.json  bad-yaml-frontmatter.md  empty-link-target.expected.json  empty-link-target.md  unclosed-comment.expected.json  unclosed-comment.md  unclosed-fence.expected.json  unclosed-fence.md  unclosed-wikilink.expected.json  unclosed-wikilink.md  unterminated-frontmatter.expected.json  unterminated-frontmatter.md
fixtures/markdown/tags/: unicode-tags.expected.json  unicode-tags.md
fixtures/rust/: unformatted.rs
fixtures/typescript/: implicit-any.ts  tsconfig.json
fixtures/ui/: hardcoded-color.css
scripts/: build-artifacts.mjs  check-affiliation.mjs  check-bundle.mjs  check-coverage.mjs  check-dco.mjs  check-hardcoded-colors.mjs  check-js-licenses.mjs  check-licenses.mjs  check-native-checklist.mjs  check-quality-gates.mjs  check-security-config.mjs  check-toolchain.mjs  check-workspace.mjs  coverage-rust.mjs  rename.mjs  rename.sh  visual-regression.mjs  workspace-task.mjs
(+32 files in other folders)
