[workspace]
members = ["crates/loam-core", "crates/loam-bench", "apps/desktop/src-tauri"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.97.1"
authors = ["Loam contributors"]
license = "AGPL-3.0-only"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
