[package]
name = "loam-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Performance harness for Loam product SLOs"

[dependencies]
loam-core = { path = "../loam-core" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"

[lints]
workspace = true
