[package]
name = "loam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure Rust engine for the Loam knowledge base"

[lints]
workspace = true

[dependencies]
blake3 = "1.8.5"
caseless = "0.2.2"
comrak = { version = "0.54.0", default-features = false }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.19"
time = { version = "0.3.53", features = ["serde-well-known", "formatting", "parsing"] }
trash = "5.2.6"
unicode-normalization = "0.1.25"
uuid = { version = "1.24.0", features = ["v4", "serde"] }
yaml-rust2 = "0.11.0"

[dev-dependencies]
proptest = "1.11.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tempfile = "3.27.0"
