[package]
name = "loam-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Tauri 2 desktop shell for Loam"

[lib]
name = "loam_desktop"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
loam-core = { path = "../../../crates/loam-core" }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-deep-link = "2.4.9"

[lints]
workspace = true

[dev-dependencies]
tauri = { version = "2.11.5", features = ["test"] }
tempfile = "3.27.0"
